package org.efrei.five.apimanagematch.external.dto;

public record FieldResponse(
        String label
) {
}
