package org.efrei.five.apimanagematch.external.dto;

import java.util.UUID;

public record TeamResponse(
        String label, String tag) {
}
