package org.efrei.domain.valueobjects;
public record Label(String value) {}
