package org.efrei.domain.valueobjects;
public enum MatchState {
    NOT_STARTED, IN_PROGRESS, FINISHED, CANCELLED
}
