package org.efrei.domain.valueobjects;
public record Tag(String value) {}
